--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     <footer class="footer">
       <div class="footer-heading">About</div>
       <div class="footer-container">
-        <div>
-          Are you a minions fan? Now you too can go all bananas and speak their
-          language! Yess the gibbrish they speak is an actual language. Enter
-          text in the above translator to convert it from English to Minions'
-          language and Go Bananas!
+        <div class="footer-content">
+          The Valyrian languages are a fictional language family in the A Song
+          of Ice and Fire series of fantasy novels by George R. R. Martin, and
+          in their television adaptation Game of Thrones.
         </div>
       </div>
     </footer>
