Remove console.logs and minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navigation">Speak Valyrian</nav>
-    <div class="right-column">
+    <div class="input">
       <h1 class="heading">Valyrio muño ēngos ñuhys issa</h1>
       <textarea
         class="textArea"
